--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ click==8.2.1
 colorama==0.4.6
 distro==1.9.0
 fastapi==0.116.1
+google-generativeai==0.8.5
 h11==0.16.0
 httpcore==1.0.9
 httptools==0.6.4
